css/app.css
/* ... */
#snackbar i {
    font-size: 3em;
    position: absolute;
    top: .2em;
    left: .2em;
    text-shadow: 0px 2px 12px rgba(0, 0, 0, .69);
}

#snackbar button {
    text-decoration: none;
    background-color: inherit;
    border: none;
    color: inherit;
    font-size: .5em;
    cursor: pointer;
    position: absolute;
    top: 0;
    right: 2em;
}

#snackbar h1 {
    width: fit-content;
    margin: 0;
    position: relative;
    bottom: .25em;
}

#snackbar p {
    margin-bottom: .8em;
    font-size: 1.5em;
    margin-left: 1em;
    position: relative;
    bottom: .25em;
    line-height: .9em;
}

#snackbar.default {
    background-color: #1D1E1F;
}

#snackbar.default.warning {
    background-color: #cb4b16;
}

#snackbar.default.error {
    background-color: #dc322f;
}

#content {
    position: relative;
    bottom: -5.5em;
    left: 0;
    top: auto;
    width: inherit;
    height: calc(100vh - 5.5em);
}

#dashboard {
    height: inherit;
    width: inherit;
}

#dashboardPanel {
    height: inherit;
    width: inherit;
    position: absolute;
    top: -.1em;
    background-color: #2C2F33;
    border-color: #99aab5;
    border-width: 1px;
    border-top-style: solid;
    border-bottom-style: solid;
    overflow: hidden;
}

#dashboardMenu {
    height: 100%;
    width: 19.8vw;
    display: inline-block;
    text-align: center;
    border-right-style: solid;
    border-color: inherit;
    border-width: 1px;
    overflow: auto;
}

#dashboardMenu .profile {
    position: relative;
    width: inherit;
    margin-top: 3em;
}

#dashboardMenu .view {
    position: relative;
    width: 75%;
    margin: auto;
    margin-top: 3em;
}

#dashboardMenu .view h3 {
    margin: 0;
    font-size: 1.5em;
    color: #99aab5;
    background-color: #1D1E1F;
    padding-top: .25em;
    padding-bottom: .25em;
    cursor: pointer;
    transition: .15s ease color;
}

#dashboardMenu .view h3 i {
    position: absolute;
    left: 0;
    right: 6em;
    margin-top: .2em;
}

#dashboardMenu .view h3:hover {
    color: white;
}

#dashboardMenu .view div ul {
    list-style: none;
    padding: 0;
    margin: auto;
    opacity: 1;
    overflow: hidden;
    transition: .5s ease opacity, .5s ease max-height;
    border-left-style: solid;
    border-right-style: solid;
    border-bottom-style: solid;
    border-width: 1px;
    border-color: #99aab5;
}

#dashboardMenu .view div ul li {
    font-size: 1.5em;
    padding-top: .5em;
    margin: auto;
    color: #99aab5;
    /* background-color: #1D1E1F; */
    padding-bottom: .5em;
    border-bottom-width: 1px;
    cursor: pointer;
    transition: .15s ease color, .15s ease background-color;
}

#dashboardMenu .view div ul li.active,#dashboardMenu .view h3.active,#dashboardMenu .view div ul li:hover {
    color: white;
}

#dashboardMenu .profile img {
    height: 6em;
    margin: auto;
    display: block;
}

#dashboardMenu .profile h1 {
    width: 100%;
    color: white;
    font-size: 2vw;
}

#dashboardMenu .profile h3 {
    color: white;
    font-size: 2em;
    margin-top: .5em;
}


#dashboardMenu .profile button.main {
    font-size: 1.25em;
}

#dashboardSettings {
    height: 100%;
    width: 80vw;
    display: inline-block;
    position: absolute;
    border-color: inherit;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    padding-bottom: 1px;
    background-color: inherit;
    z-index: 1;
}

#dashboardSettings h1 {
    display: inherit;
    margin: 0;
    position: relative;
    width: inherit;
    text-align: center;
    color: white;
    font-size: 2.5em;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-color: inherit;
    height: 1.5em;
}

#schedulerViews {
    position: absolute;
    top: 0;
    height: 100%;
    width: 80vw;
    right: 0;
    border-color: inherit;
    display: inline-block;
}

#schedulerViews h1 {
    display: inherit;
    margin: 0;
    position: relative;
    width: inherit;
    text-align: center;
    color: white;
    font-size: 2.5em;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-color: inherit;
    height: 1.5em;
}

#schedulerViews .main {
    height: 100%;
    width: 80vw;
    display: inline-block;
    position: absolute;
    border-color: inherit;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    padding-bottom: 1px;
}

#dashboardEvents {
    top: 100%;
    margin-top: 50px;
}

#dashboardShards {
    top: 100%;
    margin-top: 50px;
}

#dashboardScheduler hr {
    margin: 0;
}

#calendarDays {
    text-align: center;
    width: 90%;
    margin: auto;
    color: white;
    border-bottom-width: 1px;
    border-color: inherit;
    margin-top: .25em;
    margin-bottom: .25em;
}

#calendarDays .day {
    display: inline-block;
    width: calc(100% / 7);
    font-size: 1.2em;
}

#calendarContainer {
    width: 90%;
    margin: auto;
    height: calc(100% - 6em);
    overflow: auto;
}

#dashboardScheduler table {
    width: 100%;
    color: white;
    position: relative;
    max-height: inherit;
}

#dashboardScheduler table td {
    border-style: solid;
    border-color: #99aab5;
    border-width: 1px;
    position: relative;
}

#dashboardScheduler table td:first-child {
    left: 0px!important;
}

#dashboardScheduler table td div {
    height: 8vw;
    width: 100%;
    position: relative;
    display: inline-block;
}

#dashboardScheduler table tr td div h3 {
    color: #99aab5;
    margin-top: 0;
    font-weight: normal;
    font-size: 1.3em;
    line-height: 1em;   
}

#dashboardScheduler table tr td div {
    background-color: #1D1E1F;
}

#dashboardScheduler table tr td div.active {
    background-color: #2C2F33;
}

#dashboardScheduler table tr td div.active h3 {
    color: white;
    font-weight: bold;
}

#dashboardScheduler table tr td div.today {
    background-color: #7289DA;
    color: white;
    font-weight: bold;
}

#dashboardScheduler table tr td div.today h3 {
    color: white;
}
/* ... */

